--- a/view/package.json
+++ b/view/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build - prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": { "node": "12.22.1", "npm": "6.14.16" },
   "private": true,
