--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "view",
+  "name": "e-kali",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start" : "node server.js",
+    "ng": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -12,34 +12,57 @@
   "engines": { "node": "12.22.1", "npm": "6.14.16" },
   "private": true,
   "dependencies": {
-    "-": "0.0.1",
-    "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
-    "express": "^4.17.3",
-    "path": "^0.12.7",
-    "rxjs": "~7.5.0",
-    "save-dev": "0.0.1-security",
-    "tslib": "^2.3.0",
+    "@angular/animations": "~12.0.3",
+    "@angular/cdk": "^12.0.3",
+    "@angular/common": "~12.0.3",
+    "@angular/compiler": "~12.0.3",
+    "@angular/core": "~12.0.3",
+    "@angular/forms": "~12.0.3",
+    "@angular/google-maps": "^11.2.12",
+    "@angular/material": "^12.0.3",
+    "@angular/platform-browser": "~12.0.3",
+    "@angular/platform-browser-dynamic": "~12.0.3",
+    "@angular/router": "~12.0.3",
+    "@ngneat/tailwind": "^7.0.3",
+    "ng-particles": "^2.7.3",
+    "ngx-skeleton-loader": "^2.10.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "tsparticles": "^1.24.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "^13.3.0",
-    "@types/jasmine": "~3.10.0",
+    "@angular-builders/custom-webpack": "11.1.1",
+    "@angular-devkit/build-angular": "~12.0.3",
+    "@angular/cli": "~12.0.3",
+    "@angular/compiler-cli": "~12.0.3",
+    "@schuchard/prettier": "^5.0.0",
+    "@tailwindcss/forms": "0.3.3",
+    "@tailwindcss/typography": "0.4.1",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
+    "codelyzer": "^6.0.0",
+    "husky": "6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.3",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "10.5.4",
+    "postcss-ng-tailwind-in-components": "0.0.4",
+    "prettier": "^2.2.1",
+    "protractor": "~7.0.0",
+    "tailwindcss": "2.1.4",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "~4.2.4"
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,less,md,ts,html,component.html}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
