--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "e-kali",
+  "name": "kali",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng serve",
-    "start": "node server.js",
+    "ng": "ng",
+    "start" : "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
