--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.10",
+    "multer": "^1.4.4"
   },
-  "engines": { "node": "12.22.1", "npm": "6.14.16" }
+  "engines": {
+    "node": "12.22.1",
+    "npm": "6.14.16"
+  }
 }
