--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3"
   },
   "engines": {
     "node": "12.22.1",
